--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.88.0
 uvicorn==0.20.0
 transformers==4.24.0
-tensorflow cpu
+tensorflow-cpu
 numpy==1.22.4
 pandas==1.4.2
 matplotlib==3.5.2
